# Proyecto-III_TEC_FILE_SYSTEM

./: .gitignore  CMakeLists.txt  Disk.xml  Disk1.xml  Disk2.xml  Disk3.xml  README.md  conanfile.txt  test0  test0.txt
Disk1/: Archivo1.txt.data  Archivo1.txt0.txt  Archivo2.txt.data  Archivo3.txt.data  Archivo5.txt.data  Archivo6.txt.data
Disk2/: Archivo1.txt.data  Archivo1.txt0.txt  Archivo2.txt.data  Archivo3.txt.data  Archivo4.txt.data  Archivo5.txt.data  Archivo5.txt0.txt
Disk3/: Archivo1.txt0.txt  Archivo4.txt.data  Archivo6.txt.data
Wiki/doxy/html/: _c_e_r_o_b_o_t_8cpp.html  _c_e_r_o_b_o_t_8cpp__incl.map  _c_e_r_o_b_o_t_8cpp__incl.md5  _c_e_r_o_b_o_t_8h.html  _c_e_r_o_b_o_t_8h__dep__incl.map  _c_e_r_o_b_o_t_8h__dep__incl.md5  _c_e_r_o_b_o_t_8h__incl.map  _c_e_r_o_b_o_t_8h__incl.md5  _c_e_r_o_b_o_t_8h_source.html  _c_e_s_e_a_r_c_h_8cpp.html  _c_e_s_e_a_r_c_h_8cpp__incl.map  _c_e_s_e_a_r_c_h_8cpp__incl.md5  _c_e_s_e_a_r_c_h_8h.html  _c_e_s_e_a_r_c_h_8h__dep__incl.map  _c_e_s_e_a_r_c_h_8h__dep__incl.md5  _c_e_s_e_a_r_c_h_8h__incl.map  _c_e_s_e_a_r_c_h_8h__incl.md5  _c_e_s_e_a_r_c_h_8h_source.html  _client_8cpp.html  _client_8cpp__incl.map  _client_8cpp__incl.md5  _client_8h.html  _client_8h__dep__incl.map  _client_8h__dep__incl.md5  _client_8h__incl.map  _client_8h__incl.md5  _client_8h_source.html  _disk_nodes_8cpp.html  _disk_nodes_8cpp__incl.map  _disk_nodes_8cpp__incl.md5  _disk_nodes_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.map  _disk_nodes_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.md5  _disk_nodes_8h.html  _disk_nodes_8h__dep__incl.map  (+219 more)
src/ArchivosTxT/: Archivo1.txt  Archivo2.txt  Archivo3.txt  Archivo4.txt  Archivo5.txt  Archivo6.txt
src/CE programs/: CEROBOT.cpp  CEROBOT.h  CESEARCH.cpp  CESEARCH.h  CeRobot.cpp  CeRobot.h  CeSearch.cpp  CeSearch.h  InputBox.cpp  InputBox.h  Interface.cpp  Interface.h  Main.cpp  TextBox.cpp  TextBox.h  main.cpp
src/Disk Nodes/: DiskNodes.cpp  DiskNodes.h  Parity.cpp  Parity.h
src/Node Controller/: NodeController.cpp  NodeController.h
src/Socket/: Client.cpp  Client.h  Huffman.cpp  Huffman.h  Server.cpp  Server.h  TEST Sockets.cpp
test/: test.data  test0.txt
(+66 files in other folders)
